feat(module)增加内存泄漏 和EPic hook 框架

--- a/app/src/main/res/layout/activity_memoryleak.xml
+++ b/app/src/main/res/layout/activity_memoryleak.xml
@@ -5,7 +5,7 @@
 
     <ImageView
         android:id="@+id/iv_memoryleak"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="50dp"
+        android:layout_height="50dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
